# BulbBattle-Backend

./: LICENSE
bulbbattle-cpp/: CMakeLists.txt  hue.cpp  hue.h
bulbbattle-java/: .gitignore  build.gradle  settings.gradle
bulbbattle-java/gradle/wrapper/: gradle-wrapper.properties
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/: BulbbattleApplication.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/configuration/: WebSocketConfiguration.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/controller/: GameController.java  UserController.java  WebSocketController.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/domain/: User.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/exception/: GameIsRunningException.java  GameUnexpectedlyClosedException.java  InvalidNumberOfRoundsException.java  RegistrationException.java  UserNotFoundException.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/model/: StartModel.java  UserModel.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/repository/: UserRepository.java
bulbbattle-java/src/main/java/de/trzpiot/bulbbattle/service/: GameService.java  LightService.java  NativeService.java  UserService.java
bulbbattle-java/src/main/resources/: application.properties
bulbbattle-java/src/test/java/de/trzpiot/bulbbattle/: BulbbattleApplicationTests.java
